# rye-uv

./: Cargo.toml  LICENSE  README.md  pyproject-rye.toml  pyproject.toml
.github/workflows/: cargo_test.yml  release.yml
src/: lib.rs  main.rs
tests/: test_parse.rs
