[package]
name = "rye-uv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
toml_edit = "0.22.20"

[dev-dependencies]
pretty_assertions = "1.4.0"
