[package]
name = "rye-uv"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/lucianosrp/rye-uv"
repository = "https://github.com/lucianosrp/rye-uv"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
toml_edit = "0.22.20"

[dev-dependencies]
pretty_assertions = "1.4.0"
