[package]
name = "rye-uv"
version = "0.1.3"
edition = "2021"
description = "A CLI tool to migrate from Rye to Uv"
homepage = "https://github.com/lucianosrp/rye-uv"
repository = "https://github.com/lucianosrp/rye-uv"
readme = "README.md"
license-file = "LICENSE"
categories = ["development-tools", "command-line-utilities"]
keywords = ["rye", "uv", "python"]
authors = ["Luciano Scarpulla"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
regex = "1.10.6"
semver = "1.0.23"
toml_edit = "0.22.20"

[dev-dependencies]
pretty_assertions = "1.4.0"
